// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders 1`] = `
.c0 {
  margin-left: 0px;
}

.c4 {
  color: #0a0;
  width: 4px;
  margin-right: -8px;
  margin-bottom: -8px;
}

.c6 {
  background-color: #0a0;
  color: #fff;
  padding-left: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c8 {
  color: #0a0;
  width: 18px;
  margin-left: -8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-color: inherit;
  background-image: linear-gradient(45deg,transparent 50%,#060 50%);
  position: absolute;
  bottom: 0;
}

.c9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #0a0;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c7 {
  font-size: 12px;
  border-radius: 0 0 2px 0;
  background-color: #0a0;
  color: #fff;
  z-index: 2;
}

.c3 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c6 {
    padding-left: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

@media screen and (max-width:31.99em) {
  .c2 {
    display: none;
  }
}

<div
  className="c0 c1 "
>
  <div
    className="c2 c3"
  >
    <div
      className="c4 c5"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="c6 c7"
    color="white"
  />
  <div
    className="c8 c9"
    color="green"
    width="18px"
  />
</div>
`;

exports[`Flag renders with theme color as bg color 1`] = `
.c0 {
  width: 256px;
  margin-left: 0px;
}

.c4 {
  color: #70b;
  width: 4px;
  margin-right: -8px;
  margin-bottom: -8px;
}

.c6 {
  background-color: #70b;
  color: #fff;
  padding-left: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c8 {
  color: #70b;
  width: 18px;
  margin-left: -8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-color: inherit;
  background-image: linear-gradient(45deg,transparent 50%,#530083 50%);
  position: absolute;
  bottom: 0;
}

.c9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #70b;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c7 {
  font-size: 12px;
  border-radius: 0 0 2px 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: #70b;
  color: #fff;
  z-index: 2;
}

.c3 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c6 {
    padding-left: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

@media screen and (max-width:31.99em) {
  .c2 {
    display: none;
  }
}

<div
  className="c0 c1 "
  width={256}
>
  <div
    className="c2 c3"
  >
    <div
      className="c4 c5"
      color="purple"
      width="4px"
    />
  </div>
  <div
    className="c6 c7"
    color="white"
  />
  <div
    className="c8 c9"
    color="purple"
    width="18px"
  />
</div>
`;

exports[`Flag renders with width prop 1`] = `
.c0 {
  width: 256px;
  margin-left: 0px;
}

.c4 {
  color: #0a0;
  width: 4px;
  margin-right: -8px;
  margin-bottom: -8px;
}

.c6 {
  background-color: #0a0;
  color: #fff;
  padding-left: 4px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c8 {
  color: #0a0;
  width: 18px;
  margin-left: -8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-color: inherit;
  background-image: linear-gradient(45deg,transparent 50%,#060 50%);
  position: absolute;
  bottom: 0;
}

.c9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #0a0;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c7 {
  font-size: 12px;
  border-radius: 0 0 2px 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: #0a0;
  color: #fff;
  z-index: 2;
}

.c3 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c6 {
    padding-left: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
  }
}

@media screen and (max-width:31.99em) {
  .c2 {
    display: none;
  }
}

<div
  className="c0 c1 "
  width={256}
>
  <div
    className="c2 c3"
  >
    <div
      className="c4 c5"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="c6 c7"
    color="white"
  />
  <div
    className="c8 c9"
    color="green"
    width="18px"
  />
</div>
`;
